  (Thomas Refis and Leo White, review by Jacques Garrigue)

- GPR#1628: Treat reraise and raise_notrace as nonexpansive.
  (Leo White, review by Alain Frisch)

* GPR#1652: Don't remove module aliases in `module type of` and `with module`.
  The old behaviour can be obtained using the `[@remove_aliases]` attribute.
  (Leo White, review by Jacques Garrigue)

### Standard library:

- GPR#1002: add a new `Seq` module defining a list-of-thunks style iterator.
  Also add `{to,of}_seq` to several standard modules.
  (Simon Cruanes, review by Alain Frisch and François Bobot)

- MPR#7690, GPR#1528: fix the float_of_string function for hexadecimal floats
  with very large values of the exponent.
  (Olivier Andrieu)

- GPR#1637: String.escaped is faster does and not allocate when called with a
  string that does not contain any characters needing to be escaped.
  (Alain Frisch, review by Xavier Leroy and Gabriel Scherer)

- GPR#1638: add Float module.
  (Nicolás Ojeda Bär, review by Alain Frisch and Jeremy Yallop)

- GPR#1674, MPR#4170: add the constant `Float.pi`.
  (Christophe Troestler, review by Damien Doligez)

### Other libraries:

- MPR#7745, GPR#1629: Graphics.open_graph displays the correct window title on
  Windows again (fault introduced by 4.06 Unicode changes).
  (David Allsopp)

* GPR#1406: Unix.isatty now returns true in the native Windows ports when
  passed a file descriptor connected to a Cygwin PTY. In particular, compiler
  colors for the native Windows ports now work under Cygwin/MSYS2.
  (Nicolás Ojeda Bär, review by Gabriel Scherer, David Allsopp, Xavier Leroy)

- GPR#1451: [getpwuid], [getgrgid], [getpwnam], [getgrnam] now raise Unix error
  instead of returning [Not_found] when interrupted by a signal.
  (Arseniy Alekseyev, review by Mark Shinwell and Xavier Leroy)

- GPR#1477: raw_spacetime_lib can now be used in bytecode.
  (Nicolás Ojeda Bär, review by Mark Shinwell)

- GPR#1533: (a) The implementation of Thread.yield for system thread