@@ -306,6 +306,12 @@ let mk_not dbg cmm =
       Cop(Csubi, [Cconst_int 4; c], dbg)
 
 
+let create_loop body =
+  let cont = next_raise_count () in
+  let call_cont = Cexit (cont, []) in
+  let body = Csequence (body, call_cont) in
+  Ccatch (Recursive, [cont, [], body], call_cont)
+
 (* Turning integer divisions into multiply-high then shift.
    The [division_parameters] function is used in module Emit for
    those target platforms that support this optimization. *)
@@ -1895,7 +1901,7 @@ let rec transl env e =
       return_unit
         (ccatch
            (raise_num, [],
-            Cloop(transl_if env cond dbg Unknown
+            create_loop(transl_if env cond dbg Unknown
                     (remove_unit(transl env body))
                     (Cexit (raise_num,[]))),
             Ctuple []))
@@ -1914,7 +1920,7 @@ let rec transl env e =
                  Cifthenelse
                    (Cop(Ccmpi tst, [Cvar id; high], dbg),
                     Cexit (raise_num, []),
-                    Cloop
+                    create_loop
                       (Csequence
                          (remove_unit(transl env body),
                          Clet(id_prev, Cvar id,
@@ -3126,7 +3132,7 @@ let cache_public_method meths tag cache dbg =
   Csequence(
   ccatch
     (raise_num, [],
-     Cloop
+     create_loop
        (Clet(
         mi,
         Cop(Cor,
