@@ -105,8 +105,6 @@ let build_graph fundecl =
           interf cases.(i)
         done;
         interf i.next
-    | Iloop body ->
-        interf body; interf i.next
     | Icatch(_rec_flag, handlers, body) ->
         interf body;
         List.iter (fun (_, handler) -> interf handler) handlers;
@@ -176,10 +174,6 @@ let build_graph fundecl =
         for i = 0 to Array.length cases - 1 do
           prefer (weight / 2) cases.(i)
         done;
-        prefer weight i.next
-    | Iloop body ->
-        (* Avoid overflow of weight and spill_cost *)
-        prefer (if weight < 1000 then 8 * weight else weight) body;
         prefer weight i.next
     | Icatch(rec_flag, handlers, body) ->
         prefer weight body;
